--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
 
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/aquila-king/order-service.java.git'
+                git branch: 'main', url: 'https://github.com/aquila-king/payment-service.git'
             }
         }
 
