--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,75 +1,7 @@
-pipeline {
-    agent any
+@Library('shared-lib') _  // Reference your global Jenkins shared library
 
-    tools {
-        maven 'mvn'
-        jdk 'jdk'
-    }
-
-    environment {
-        DOCKER_CREDS = credentials('docker-cred')
-    }
-
-    stages {
-        stage('Cleanup') {
-            steps {
-                cleanWs()
-            }
-        }
-
-        stage('Checkout Code') {
-            steps {
-                git branch: 'main', url: 'https://github.com/aquila-king/payment-service.git'
-            }
-        }
-
-        stage('Unit Testing') {
-            steps {
-                sh 'mvn test'
-            }
-        }
-
-        stage('Build Docker Image') {
-            steps {
-                sh 'docker build -t kuunyangna/myapp-11:v2 .'
-            }
-        }
-
-        stage('Push Docker Image') {
-            steps {
-                sh '''
-                    echo $DOCKER_CREDS_PSW | docker login -u $DOCKER_CREDS_USR --password-stdin
-                    docker push kuunyangna/myapp-11:v2
-                '''
-            }
-        }
-
-        stage('Deploy to EKS') {
-            steps {
-                withCredentials([usernamePassword(
-                    credentialsId: 'aws-cred',
-                    usernameVariable: 'AWS_ACCESS_KEY_ID',
-                    passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-                )]) {
-                    sh '''
-                        # Update kubeconfig to connect Jenkins to your EKS cluster
-                        aws eks update-kubeconfig --region us-east-2 --name aquila-cluster
-
-                        # Ensure we are in the repo directory
-                        cd $WORKSPACE
-
-                        # Apply Kubernetes manifests
-                        kubectl apply -f k8-deployment.yaml
-                        kubectl apply -f k8-service.yaml
-
-                        # Update deployment to new Docker image
-                        kubectl set image deployment/myapp-deployment myapp-container=kuunyangna/myapp-11:v2 --record
-
-                        # Wait for rollout to complete
-                        kubectl rollout status deployment/myapp-deployment
-                    '''
-                }
-            }
-        }
-    }
-}
+deployMicroservice(
+    repoUrl: 'https://github.com/aquila-king/payment-service.git', 
+    imageName: 'payment-service', 
+    namespace: 'payment-namespace'
+)
