--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,4 +4,5 @@ deployMicroservice(
     repoUrl: 'https://github.com/aquila-king/payment-service.git', 
     imageName: 'payment-service', 
     namespace: 'payment-namespace'
+    clusterName: 'aquila-cluster'
 )
