--- a/k8-service.yaml
+++ b/k8-service.yaml
@@ -1,34 +1,12 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: myapp-deployment
-  labels:
-    app: myapp
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: myapp
-  template:
-    metadata:
-      labels:
-        app: myapp
-    spec:
-      containers:
-        - name: myapp-container
-          image: kuunyangna/myapp-10:latest   # Docker image from your Docker Hub
-          ports:
-            - containerPort: 80
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: payment-service
 spec:
-  type: LoadBalancer   # creates a public ELB in AWS
+  type: LoadBalancer
   selector:
-    app: myapp
+    app: payment-service
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  - protocol: TCP
+    port: 80
+    targetPort: 80
