--- a/k8-service.yaml
+++ b/k8-service.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: payment-service
+  namespace: payment-namespace
 spec:
   type: LoadBalancer
   selector:
-    app: payment-service
+    app: payment
   ports:
   - protocol: TCP
     port: 80
