--- a/k8-deployment.yaml
+++ b/k8-deployment.yaml
@@ -1,23 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: payment-deployment
+  name: payment-service-deployment       # matches ${imageName}-deployment
   namespace: payment-namespace
   labels:
-    app: payment
+    app: payment-service                 # matches service selector
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: payment
+      app: payment-service
   template:
     metadata:
       labels:
-        app: payment
+        app: payment-service
     spec:
       containers:
-      - name: payment-container
-        image: kuunyangna/payment-service:v2
-        imagePullPolicy: Always
+      - name: payment-service-container  # matches ${imageName}-container
+        image: kuunyangna/payment-service:v1
         ports:
         - containerPort: 80
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 20
